src/argocd/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
    name: rollouts-demo
spec:
    replicas: 5
    strategy:
        canary:
            steps:
                - setWeight: 20
                - pause: {}
                - setWeight: 40
                - pause: {duration: 10}
                - setWeight: 60
                - pause: {duration: 10}
                - setWeight: 80
                - pause: {duration: 10}
    revisionHistoryLimit: 2
    selector:
        matchLabels:
            app: rollouts-demo
    template:
        metadata:
            labels:
                app: rollouts-demo
        spec:
            containers:
                - name: rollouts-demo
                  image: argoproj/rollouts-demo:purple
                  ports:
                      - name: http
                        containerPort: 8080
                        protocol: TCP
                  resources:
                      requests:
                          memory: 32Mi
                          cpu: 5m
