src/argocd/rollout-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: rollout-demo-ingress
spec:
    ingressClassName: nginx
    rules:
        -   http:
                paths:
                    -   path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: rollouts-demo
                                port:
                                    number: 80
